--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,33 @@
       ></section>
 
       <!-- Image Display Area -->
-      <section id="display-area" class="mx-auto max-w-3xl hidden mb-16">
+      <section
+        id="loading-area"
+        class="hidden justify-center items-center mb-16"
+      >
+        <svg
+          class="animate-spin -ml-1 mr-3 h-6 w-6 text-gray-100"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+        >
+          <circle
+            class="opacity-25"
+            cx="12"
+            cy="12"
+            r="10"
+            stroke="currentColor"
+            stroke-width="4"
+          ></circle>
+          <path
+            class="opacity-75"
+            fill="currentColor"
+            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+          ></path>
+        </svg>
+        <p class="text-2xl font-light mb-0.5 text-gray-100">분석 중...</p>
+      </section>
+      <section id="display-area" class="mx-auto max-w-3xl mb-16">
         <!-- The uploaded image will be displayed here -->
       </section>
 
@@ -99,7 +125,7 @@
 
       <!-- Descirption Area -->
       <div
-        class="mx-auto mt-80 py-16 sm-py:-24 border-t-[1px] border-t-gray-600 flex justify-center items-center"
+        class="mx-auto mt-80 py-12 sm:py-24 border-t-[1px] border-t-gray-600 flex justify-center items-center"
       >
         <h1 class="text-gray-800 text-4xl lg:text-7xl font-bold text-center">
           군대 폐급/에이스 유형
