adding google advertise

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="kr">
+  <script
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9824866874544320"
+    crossorigin="anonymous"
+  ></script>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -222,6 +227,7 @@
         </div>
       </div>
     </div>
+
     <!-- Footer -->
     <footer
       class="w-full h-24 bg-third flex flex-col justify-around items-center lg:flex-row"
