modify ads setting

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="AI 분석 모델로 군대 폐급/에이스 유형을 알아보는 관상 테스트입니다."
     />
+    <meta name="google-adsense-account" content="ca-pub-9824866874544320" />
     <!-- Noto Sans KR Font From Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
