--- a/src/index.html
+++ b/src/index.html
@@ -74,8 +74,7 @@
 
       <div class="p-4 mb-16 flex flex-col xl:flex-row justify-between">
         <p class="text-sm lg:text-lg font-light text-gray-100">
-          ※ 보다 정확한 결과를 위해 얼굴 위주의 사진을 올려주세요.<br />
-          ※ 본 테스트는 순전히 재미로만 즐겨주세요.
+          ※ 보다 정확한 결과를 위해 얼굴 위주의 사진을 올려주세요.
         </p>
       </div>
 
